--- a/examples/character_level_language_modelling/autoregressive_LSTM.ipynb
+++ b/examples/character_level_language_modelling/autoregressive_LSTM.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "cead063f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,6 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "ae5a60b1",
    "metadata": {
     "scrolled": false
    },
@@ -92,6 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "a531a84d",
    "metadata": {},
    "outputs": [
     {
@@ -112,6 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "4c17640f",
    "metadata": {},
    "outputs": [
     {
@@ -133,22 +137,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "1c4d93a2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "char2i = {c:i for i, c in enumerate(sorted(vocabulary), 3)}\n",
-    "char2i[\"<PAD>\"] = 0\n",
-    "char2i[\"<START>\"] = 1\n",
-    "char2i[\"<END>\"] = 2\n",
-    "i2char = {i:c for i, c in enumerate(sorted(vocabulary), 3)}\n",
-    "i2char[0] = \"<PAD>\"\n",
-    "i2char[1] = \"<START>\"\n",
-    "i2char[2] = \"<END>\""
+    "# from nltk.lm import Vocabulary\n",
+    "# vocabulary = Vocabulary(text)\n",
+    "# len(vocabulary)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "3a2325bf",
    "metadata": {},
    "outputs": [
     {
@@ -171,6 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "680b1ae1",
    "metadata": {},
    "outputs": [
     {
@@ -181,28 +183,6 @@
       "556932\n",
       "['\\ufeffThe Project Gute', 'The Project Guten', 'he Project Gutenb', 'e Project Gutenbe', ' Project Gutenber']\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "045e895b086d4418805e4a9378f1d273",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=556932.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "torch.Size([556932, 17])\n"
-     ]
     }
    ],
    "source": [
@@ -212,13 +192,12 @@
     "    lines.append(text[i:length + i])\n",
     "print(len(text))\n",
     "print(len(lines))\n",
-    "print(lines[:5])\n",
-    "encoded = torch.tensor([[char2i[c] for c in l] for l in tqdm(lines)]).to(device).long()\n",
-    "print(encoded.shape)"
+    "print(lines[:5])"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "396ff33d",
    "metadata": {},
    "source": [
     "# fit"
@@ -227,6 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "4f08c0ff",
    "metadata": {
     "scrolled": false
    },
@@ -236,36 +216,41 @@
      "output_type": "stream",
      "text": [
       "Model: Autoregressive LSTM\n",
-      "Tokens in the in vocabulary: 95\n",
-      "Tokens in the out vocabulary: 95\n",
+      "Tokens in the vocabulary: 92\n",
       "Embedding dimension: 32\n",
       "Hidden units: 128\n",
       "Layers: 2\n",
       "Dropout: 0.0\n",
       "Trainable parameters: 230,335\n",
       "\n",
+      "torch.Size([556932, 19])\n",
       "Epoch | Train                 | Minutes\n",
       "      | Loss     | Error Rate |\n",
       "---------------------------------------\n",
-      "    1 |   1.2144 |     34.259 |     0.8\n",
-      "    2 |   0.9702 |     29.068 |     1.5\n",
-      "    3 |   0.9262 |     28.001 |     2.2\n",
-      "    4 |   0.9010 |     27.378 |     3.0\n",
-      "    5 |   0.8833 |     26.933 |     3.7\n"
+      "    1 |   1.3625 |     37.194 |     0.8\n",
+      "    2 |   1.0773 |     30.880 |     1.7\n",
+      "    3 |   1.0234 |     29.590 |     2.5\n",
+      "    4 |   0.9925 |     28.860 |     3.4\n",
+      "    5 |   0.9729 |     28.371 |     4.2\n"
      ]
     }
    ],
    "source": [
     "importlib.reload(autoregressive)    \n",
-    "net = autoregressive.LSTM(char2i, i2char)\n",
+    "net = autoregressive.LSTM(vocabulary)\n",
     "net.to(device)\n",
+    "\n",
+    "encoded = net.text2tensor(lines).to(device)\n",
+    "print(encoded.shape)\n",
+    "\n",
     "performance = net.fit(encoded, save_path = \"checkpoints/autoregressive_lstm.pt\", progress_bar = 0)\n",
     "net.save_architecture(\"architectures/autoregressive_lstm.architecture\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
+   "id": "bce5ac70",
    "metadata": {},
    "outputs": [
     {
@@ -307,9 +292,9 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>1.214361</td>\n",
-       "      <td>34.259445</td>\n",
-       "      <td>0.800802</td>\n",
+       "      <td>1.362476</td>\n",
+       "      <td>37.194238</td>\n",
+       "      <td>0.821268</td>\n",
        "      <td>0.001</td>\n",
        "      <td>0</td>\n",
        "      <td>Autoregressive LSTM</td>\n",
@@ -322,9 +307,9 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>0.970247</td>\n",
-       "      <td>29.068192</td>\n",
-       "      <td>1.486204</td>\n",
+       "      <td>1.077298</td>\n",
+       "      <td>30.879623</td>\n",
+       "      <td>1.658315</td>\n",
        "      <td>0.001</td>\n",
        "      <td>0</td>\n",
        "      <td>Autoregressive LSTM</td>\n",
@@ -337,9 +322,9 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>0.926212</td>\n",
-       "      <td>28.000849</td>\n",
-       "      <td>2.167026</td>\n",
+       "      <td>1.023353</td>\n",
+       "      <td>29.589868</td>\n",
+       "      <td>2.506511</td>\n",
        "      <td>0.001</td>\n",
        "      <td>0</td>\n",
        "      <td>Autoregressive LSTM</td>\n",
@@ -352,9 +337,9 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>0.900984</td>\n",
-       "      <td>27.378410</td>\n",
-       "      <td>2.986085</td>\n",
+       "      <td>0.992494</td>\n",
+       "      <td>28.860186</td>\n",
+       "      <td>3.352504</td>\n",
        "      <td>0.001</td>\n",
        "      <td>0</td>\n",
        "      <td>Autoregressive LSTM</td>\n",
@@ -367,9 +352,9 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>0.883336</td>\n",
-       "      <td>26.933337</td>\n",
-       "      <td>3.659008</td>\n",
+       "      <td>0.972910</td>\n",
+       "      <td>28.370848</td>\n",
+       "      <td>4.199089</td>\n",
        "      <td>0.001</td>\n",
        "      <td>0</td>\n",
        "      <td>Autoregressive LSTM</td>\n",
@@ -385,11 +370,11 @@
       ],
       "text/plain": [
        "   epoch  train_loss  train_error_rate   minutes  learning_rate  weight_decay  \\\n",
-       "0      1    1.214361         34.259445  0.800802          0.001             0   \n",
-       "1      2    0.970247         29.068192  1.486204          0.001             0   \n",
-       "2      3    0.926212         28.000849  2.167026          0.001             0   \n",
-       "3      4    0.900984         27.378410  2.986085          0.001             0   \n",
-       "4      5    0.883336         26.933337  3.659008          0.001             0   \n",
+       "0      1    1.362476         37.194238  0.821268          0.001             0   \n",
+       "1      2    1.077298         30.879623  1.658315          0.001             0   \n",
+       "2      3    1.023353         29.589868  2.506511          0.001             0   \n",
+       "3      4    0.992494         28.860186  3.352504          0.001             0   \n",
+       "4      5    0.972910         28.370848  4.199089          0.001             0   \n",
        "\n",
        "                 model  embedding_dimension  hidden_units  layers  dropout  \\\n",
        "0  Autoregressive LSTM                   32           128       2      0.0   \n",
@@ -406,7 +391,7 @@
        "4      230335  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,20 +404,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
+   "id": "102ff488",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['\\ufeffThe Project Gute',\n",
-       " 'The Project Guten',\n",
-       " 'he Project Gutenb',\n",
-       " 'e Project Gutenbe',\n",
-       " ' Project Gutenber']"
+       "['<START>\\ufeffThe Project Gute<END>',\n",
+       " '<START>The Project Guten<END>',\n",
+       " '<START>he Project Gutenb<END>',\n",
+       " '<START>e Project Gutenbe<END>',\n",
+       " '<START> Project Gutenber<END>']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,6 +431,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "04a4c9a8",
    "metadata": {},
    "source": [
     "# predict"
@@ -452,7 +439,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
+   "id": "dc3a1e90",
    "metadata": {},
    "outputs": [
     {
@@ -460,8 +448,7 @@
      "output_type": "stream",
      "text": [
       "Model: Autoregressive LSTM\n",
-      "Tokens in the in vocabulary: 95\n",
-      "Tokens in the out vocabulary: 95\n",
+      "Tokens in the vocabulary: 92\n",
       "Embedding dimension: 32\n",
       "Hidden units: 128\n",
       "Layers: 2\n",
@@ -473,14 +460,14 @@
     {
      "data": {
       "text/plain": [
-       "['\\ufeffThe Project Gutenberg-tm electronic ',\n",
-       " 'The Project Gutenberg-tm electronic w',\n",
-       " 'he Project Gutenberg-tm electronic wo',\n",
-       " 'e Project Gutenberg-tm electronic wor',\n",
-       " ' Project Gutenberg-tm electronic work']"
+       "['<START>\\ufeffThe Project Gute<END>',\n",
+       " '<START>The Project Guten<END>',\n",
+       " '<START>he Project Gutenb<END>',\n",
+       " '<START>e Project Gutenbe<END>',\n",
+       " '<START> Project Gutenber<END>']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +483,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "cb6c7c06",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[  0.0000, -18.1405, -18.5183, -18.9254, -19.2813],\n",
+       "        [  0.0000, -18.2268, -18.4837, -18.8527, -19.3396],\n",
+       "        [  0.0000, -18.2711, -18.5763, -19.0656, -19.8647],\n",
+       "        [  0.0000, -18.0455, -18.2597, -18.5316, -18.8450],\n",
+       "        [  0.0000, -18.0135, -18.2310, -18.2523, -18.6434]], device='cuda:0')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_probabilities"
+   ]
+  },
+  {
    "cell_type": "markdown",
+   "id": "ce9ab58d",
    "metadata": {},
    "source": [
     "# greedy_search"
@@ -504,7 +517,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
+   "id": "02508ab3",
    "metadata": {},
    "outputs": [
     {
@@ -512,28 +526,27 @@
      "output_type": "stream",
      "text": [
       "Model: Autoregressive LSTM\n",
-      "Tokens in the in vocabulary: 95\n",
-      "Tokens in the out vocabulary: 95\n",
+      "Tokens in the vocabulary: 92\n",
       "Embedding dimension: 32\n",
       "Hidden units: 128\n",
       "Layers: 2\n",
       "Dropout: 0.0\n",
       "Trainable parameters: 230,335\n",
       "\n",
-      "tensor([-2.4522, -2.5134, -2.5617, -2.5795, -2.5688], device='cuda:0')\n"
+      "tensor([0., 0., 0., 0., 0.], device='cuda:0')\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['\\ufeffThe Project Gutenberg-tm electronic ',\n",
-       " 'The Project Gutenberg-tm electronic w',\n",
-       " 'he Project Gutenberg-tm electronic wo',\n",
-       " 'e Project Gutenberg-tm electronic wor',\n",
-       " ' Project Gutenberg-tm electronic work']"
+       "['<START>\\ufeffThe Project Gute<END>',\n",
+       " '<START>The Project Guten<END>',\n",
+       " '<START>he Project Gutenb<END>',\n",
+       " '<START>e Project Gutenbe<END>',\n",
+       " '<START> Project Gutenber<END>']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,6 +564,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6cd33c29",
    "metadata": {},
    "source": [
     "# sample"
@@ -558,7 +572,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
+   "id": "5cc754d1",
    "metadata": {},
    "outputs": [
     {
@@ -566,28 +581,27 @@
      "output_type": "stream",
      "text": [
       "Model: Autoregressive LSTM\n",
-      "Tokens in the in vocabulary: 95\n",
-      "Tokens in the out vocabulary: 95\n",
+      "Tokens in the vocabulary: 92\n",
       "Embedding dimension: 32\n",
       "Hidden units: 128\n",
       "Layers: 2\n",
       "Dropout: 0.0\n",
       "Trainable parameters: 230,335\n",
       "\n",
-      "tensor([-10.0899, -24.9052, -11.4014, -22.5374,  -9.9133], device='cuda:0')\n"
+      "tensor([0., 0., 0., 0., 0.], device='cuda:0')\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['\\ufeffThe Project Gutenberg-tm to exchange',\n",
-       " 'The Project Gutenberg-tm file wit as ',\n",
-       " 'he Project Gutenberg Literary\\n[Footno',\n",
-       " 'e Project Gutenberg\" as to avoid a gr',\n",
-       " ' Project Gutenberg-tm License\\n\\n      ']"
+       "['<START>\\ufeffThe Project Gute<END>',\n",
+       " '<START>The Project Guten<END>',\n",
+       " '<START>he Project Gutenb<END>',\n",
+       " '<START>e Project Gutenbe<END>',\n",
+       " '<START> Project Gutenber<END>']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,6 +619,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e3a1efbb",
    "metadata": {},
    "source": [
     "# beam_search"
@@ -612,7 +627,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
+   "id": "04a11f91",
    "metadata": {},
    "outputs": [
     {
@@ -620,44 +636,43 @@
      "output_type": "stream",
      "text": [
       "Model: Autoregressive LSTM\n",
-      "Tokens in the in vocabulary: 95\n",
-      "Tokens in the out vocabulary: 95\n",
+      "Tokens in the vocabulary: 92\n",
       "Embedding dimension: 32\n",
       "Hidden units: 128\n",
       "Layers: 2\n",
       "Dropout: 0.0\n",
       "Trainable parameters: 230,335\n",
       "\n",
-      "tensor([[-2.4522, -3.0231, -4.5768, -4.8534, -5.7860],\n",
-      "        [-2.5134, -3.1163, -4.6800, -5.7090, -5.9480],\n",
-      "        [-2.5617, -3.1450, -4.7755, -5.6018, -5.9589],\n",
-      "        [-2.5795, -3.2951, -4.8843, -5.8266, -5.9226],\n",
-      "        [-2.5688, -3.4184, -4.8764, -6.4988, -6.7574]], device='cuda:0')\n",
-      "[['\\ufeffThe Project Gutenberg-tm electronic ',\n",
-      "  '\\ufeffThe Project Gutenberg Literary Archi',\n",
-      "  '\\ufeffThe Project Gutenberg-tm electronic\\n',\n",
-      "  '\\ufeffThe Project Gutenberg-tm trademark, ',\n",
-      "  '\\ufeffThe Project Gutenberg-tm trademark. '],\n",
-      " ['The Project Gutenberg-tm electronic w',\n",
-      "  'The Project Gutenberg Literary Archiv',\n",
-      "  'The Project Gutenberg-tm electronic\\nw',\n",
-      "  'The Project Gutenberg-tm trademark, a',\n",
-      "  'The Project Gutenberg Literary Archil'],\n",
-      " ['he Project Gutenberg-tm electronic wo',\n",
-      "  'he Project Gutenberg Literary Archive',\n",
-      "  'he Project Gutenberg-tm electronic\\nwo',\n",
-      "  'he Project Gutenberg-tm electronic wa',\n",
-      "  'he Project Gutenberg-tm trademark, an'],\n",
-      " ['e Project Gutenberg-tm electronic wor',\n",
-      "  'e Project Gutenberg Literary Archive ',\n",
-      "  'e Project Gutenberg-tm electronic\\nwor',\n",
-      "  'e Project Gutenberg Literary Archive\\n',\n",
-      "  'e Project Gutenberg-tm electronic war'],\n",
-      " [' Project Gutenberg-tm electronic work',\n",
-      "  ' Project Gutenberg Literary Archive F',\n",
-      "  ' Project Gutenberg-tm electronic\\nwork',\n",
-      "  ' Project Gutenberg Literary Archive\\nF',\n",
-      "  ' Project Gutenberg Literary Archive E']]\n"
+      "tensor([[  0.0000, -18.1405, -18.5183, -18.9254, -19.2813],\n",
+      "        [  0.0000, -18.2268, -18.4837, -18.8527, -19.3396],\n",
+      "        [  0.0000, -18.2711, -18.5763, -19.0656, -19.8647],\n",
+      "        [  0.0000, -18.0455, -18.2597, -18.5316, -18.8450],\n",
+      "        [  0.0000, -18.0135, -18.2310, -18.2523, -18.6434]], device='cuda:0')\n",
+      "[['<START>\\ufeffThe Project Gute<END>',\n",
+      "  '<START>\\ufeffThe Project Gute<END>',\n",
+      "  '<START>\\ufeffThe Project Gute<END>',\n",
+      "  '<START>\\ufeffThe Project Gute<END>',\n",
+      "  '<START>\\ufeffThe Project Gute<END>'],\n",
+      " ['<START>The Project Guten<END>',\n",
+      "  '<START>The Project Guten<END>',\n",
+      "  '<START>The Project Guten<END>',\n",
+      "  '<START>The Project Guten<END>',\n",
+      "  '<START>The Project Guten<END>'],\n",
+      " ['<START>he Project Gutenb<END>',\n",
+      "  '<START>he Project Gutenb<END>',\n",
+      "  '<START>he Project Gutenb<END>',\n",
+      "  '<START>he Project Gutenb<END>',\n",
+      "  '<START>he Project Gutenb<END>'],\n",
+      " ['<START>e Project Gutenbe<END>',\n",
+      "  '<START>e Project Gutenbe<END>',\n",
+      "  '<START>e Project Gutenbe<END>',\n",
+      "  '<START>e Project Gutenbe<END>',\n",
+      "  '<START>e Project Gutenbe<END>'],\n",
+      " ['<START> Project Gutenber<END>',\n",
+      "  '<START> Project Gutenber<END>',\n",
+      "  '<START> Project Gutenber<END>',\n",
+      "  '<START> Project Gutenber<END>',\n",
+      "  '<START> Project Gutenber<END>']]\n"
      ]
     }
    ],
@@ -671,13 +686,6 @@
     "print(log_probabilities)\n",
     "pprint([net.tensor2text(t) for t in indexes])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -696,7 +704,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
