--- a/examples/character_level_language_modelling/autoregressive_LSTM.ipynb
+++ b/examples/character_level_language_modelling/autoregressive_LSTM.ipynb
@@ -223,7 +223,7 @@
       "Dropout: 0.0\n",
       "Trainable parameters: 230,335\n",
       "\n",
-      "torch.Size([556932, 19])\n",
+      "torch.Size([556932, 17])\n",
       "Training started\n",
       "Epochs: 5\n",
       "Learning rate: 0.001\n",
@@ -231,23 +231,11 @@
       "Epoch | Train                 | Minutes\n",
       "      | Loss     | Error Rate |\n",
       "---------------------------------------\n",
-      "    1 |   1.3814 |     37.656 |     0.9\n",
-      "    2 |   1.0845 |     31.058 |     1.7\n",
-      "    3 |   1.0266 |     29.660 |     2.6\n",
-      "    4 |   0.9955 |     28.889 |     3.4\n",
-      "    5 |   0.9748 |     28.380 |     4.3\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'architectures/autoregressive_lstm.architecture'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-333049a9a33c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mperformance\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mencoded\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msave_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"checkpoints/autoregressive_lstm.pt\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprogress_bar\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave_architecture\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"architectures/autoregressive_lstm.architecture\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/phd/projects/pytorch_decoding/autoregressive.py\u001b[0m in \u001b[0;36msave_architecture\u001b[0;34m(self, path)\u001b[0m\n\u001b[1;32m    474\u001b[0m                 \u001b[0mPath\u001b[0m \u001b[0mto\u001b[0m \u001b[0msave\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mdictionary\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    475\u001b[0m         \"\"\"\n\u001b[0;32m--> 476\u001b[0;31m         \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"wb\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    477\u001b[0m             \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marchitecture\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    478\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'architectures/autoregressive_lstm.architecture'"
+      "    1 |   1.2248 |     34.568 |     0.7\n",
+      "    2 |   0.9714 |     29.082 |     1.5\n",
+      "    3 |   0.9251 |     27.978 |     2.3\n",
+      "    4 |   0.8987 |     27.328 |     3.1\n",
+      "    5 |   0.8803 |     26.873 |     3.9\n"
      ]
     }
    ],
@@ -265,10 +253,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "bce5ac70",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>epoch</th>\n",
+       "      <th>train_loss</th>\n",
+       "      <th>train_error_rate</th>\n",
+       "      <th>training_minutes</th>\n",
+       "      <th>learning_rate</th>\n",
+       "      <th>weight_decay</th>\n",
+       "      <th>model</th>\n",
+       "      <th>embedding_dimension</th>\n",
+       "      <th>hidden_units</th>\n",
+       "      <th>layers</th>\n",
+       "      <th>dropout</th>\n",
+       "      <th>parameters</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.224767</td>\n",
+       "      <td>34.567708</td>\n",
+       "      <td>0.748852</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Autoregressive LSTM</td>\n",
+       "      <td>32</td>\n",
+       "      <td>128</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>230335</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.971367</td>\n",
+       "      <td>29.081737</td>\n",
+       "      <td>1.526219</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Autoregressive LSTM</td>\n",
+       "      <td>32</td>\n",
+       "      <td>128</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>230335</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.925073</td>\n",
+       "      <td>27.978281</td>\n",
+       "      <td>2.304914</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Autoregressive LSTM</td>\n",
+       "      <td>32</td>\n",
+       "      <td>128</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>230335</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.898749</td>\n",
+       "      <td>27.327753</td>\n",
+       "      <td>3.073714</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Autoregressive LSTM</td>\n",
+       "      <td>32</td>\n",
+       "      <td>128</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>230335</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0.880287</td>\n",
+       "      <td>26.872659</td>\n",
+       "      <td>3.851194</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Autoregressive LSTM</td>\n",
+       "      <td>32</td>\n",
+       "      <td>128</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>230335</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   epoch  train_loss  train_error_rate  training_minutes  learning_rate  \\\n",
+       "0      1    1.224767         34.567708          0.748852          0.001   \n",
+       "1      2    0.971367         29.081737          1.526219          0.001   \n",
+       "2      3    0.925073         27.978281          2.304914          0.001   \n",
+       "3      4    0.898749         27.327753          3.073714          0.001   \n",
+       "4      5    0.880287         26.872659          3.851194          0.001   \n",
+       "\n",
+       "   weight_decay                model  embedding_dimension  hidden_units  \\\n",
+       "0             0  Autoregressive LSTM                   32           128   \n",
+       "1             0  Autoregressive LSTM                   32           128   \n",
+       "2             0  Autoregressive LSTM                   32           128   \n",
+       "3             0  Autoregressive LSTM                   32           128   \n",
+       "4             0  Autoregressive LSTM                   32           128   \n",
+       "\n",
+       "   layers  dropout  parameters  \n",
+       "0       2      0.0      230335  \n",
+       "1       2      0.0      230335  \n",
+       "2       2      0.0      230335  \n",
+       "3       2      0.0      230335  \n",
+       "4       2      0.0      230335  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# includes all the information about the epoch and the model, useful for reproducibility\n",
     "\n",
@@ -277,10 +408,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "102ff488",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['\\ufeffThe Project Gute',\n",
+       " 'The Project Guten',\n",
+       " 'he Project Gutenb',\n",
+       " 'e Project Gutenbe',\n",
+       " ' Project Gutenber']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# the input for testing\n",
     "\n",
@@ -297,21 +443,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "dc3a1e90",
    "metadata": {},
    "outputs": [
     {
-     "ename": "UnpicklingError",
-     "evalue": "invalid load key, 'v'.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnpicklingError\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-1b12c1e428b1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mimportlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mautoregressive\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mnet\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mautoregressive\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_architecture\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"models/autoregressive_lstm.architecture\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_state_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"checkpoints/autoregressive_lstm.pt\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlog_probabilities\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mencoded\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmain_progress_bar\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprogress_bar\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/phd/projects/pytorch_decoding/autoregressive.py\u001b[0m in \u001b[0;36mload_architecture\u001b[0;34m(path)\u001b[0m\n\u001b[1;32m    536\u001b[0m     \"\"\"\n\u001b[1;32m    537\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 538\u001b[0;31m         \u001b[0marchitecture\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    539\u001b[0m     \u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0marchitecture\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"model\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    540\u001b[0m     \u001b[0marchitecture\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"parameters\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mUnpicklingError\u001b[0m: invalid load key, 'v'."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: Autoregressive LSTM\n",
+      "Tokens in the vocabulary: 92\n",
+      "Embedding dimension: 32\n",
+      "Hidden units: 128\n",
+      "Layers: 2\n",
+      "Dropout: 0.0\n",
+      "Trainable parameters: 230,335\n",
+      "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['\\ufeffThe Project Gutenberg Literary Archi',\n",
+       " 'The Project Gutenberg Literary Archiv',\n",
+       " 'he Project Gutenberg Literary Archive',\n",
+       " 'e Project Gutenberg Literary Archive ',\n",
+       " ' Project Gutenberg Literary Archive F']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -326,10 +488,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "cb6c7c06",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-2.2667, -2.6597, -4.9379, -5.1540, -5.4737],\n",
+       "        [-2.3132, -2.7272, -5.0683, -5.3617, -6.3552],\n",
+       "        [-2.3244, -2.7650, -5.1401, -5.6308, -6.4696],\n",
+       "        [-2.4750, -2.7939, -4.4382, -5.2172, -5.6364],\n",
+       "        [-2.7056, -2.8104, -5.1420, -5.2348, -5.4865]], device='cuda:0')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "log_probabilities"
    ]
@@ -344,10 +521,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "02508ab3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: Autoregressive LSTM\n",
+      "Tokens in the vocabulary: 92\n",
+      "Embedding dimension: 32\n",
+      "Hidden units: 128\n",
+      "Layers: 2\n",
+      "Dropout: 0.0\n",
+      "Trainable parameters: 230,335\n",
+      "\n",
+      "tensor([-2.6597, -2.7272, -2.7650, -2.7939, -2.8104], device='cuda:0')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['\\ufeffThe Project Gutenberg-tm electronic ',\n",
+       " 'The Project Gutenberg-tm electronic w',\n",
+       " 'he Project Gutenberg-tm electronic wo',\n",
+       " 'e Project Gutenberg-tm electronic wor',\n",
+       " ' Project Gutenberg-tm electronic work']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "importlib.reload(autoregressive)    \n",
     "net = autoregressive.load_architecture(\"models/autoregressive_lstm.arch\")\n",
@@ -369,10 +576,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "5cc754d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: Autoregressive LSTM\n",
+      "Tokens in the vocabulary: 92\n",
+      "Embedding dimension: 32\n",
+      "Hidden units: 128\n",
+      "Layers: 2\n",
+      "Dropout: 0.0\n",
+      "Trainable parameters: 230,335\n",
+      "\n",
+      "tensor([-13.3856, -12.2580,  -9.9078, -22.7814, -22.9671], device='cuda:0')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['\\ufeffThe Project Gutenberg-tm work, sever',\n",
+       " 'The Project Gutenberg-tm\\ncasker.\\n\\n   ',\n",
+       " 'he Project Gutenberg-tm License is to',\n",
+       " 'e Project Gutenberg Literably the uls',\n",
+       " ' Project Gutenberg White gives P-KB4 ']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "importlib.reload(autoregressive)    \n",
     "net = autoregressive.load_architecture(\"models/autoregressive_lstm.arch\")\n",
@@ -394,10 +631,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "04a11f91",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: Autoregressive LSTM\n",
+      "Tokens in the vocabulary: 92\n",
+      "Embedding dimension: 32\n",
+      "Hidden units: 128\n",
+      "Layers: 2\n",
+      "Dropout: 0.0\n",
+      "Trainable parameters: 230,335\n",
+      "\n",
+      "tensor([[-2.2667, -2.6597, -4.9379, -5.1540, -5.4737],\n",
+      "        [-2.3132, -2.7272, -5.0683, -5.3617, -6.3552],\n",
+      "        [-2.3244, -2.7650, -5.1401, -5.6308, -6.4696],\n",
+      "        [-2.4750, -2.7939, -4.4382, -5.2172, -5.6364],\n",
+      "        [-2.7056, -2.8104, -5.1420, -5.2348, -5.4865]], device='cuda:0')\n",
+      "[['\\ufeffThe Project Gutenberg Literary Archi',\n",
+      "  '\\ufeffThe Project Gutenberg-tm electronic ',\n",
+      "  '\\ufeffThe Project Gutenberg-tm electronic\\n',\n",
+      "  '\\ufeffThe Project Gutenberg-tm electronica',\n",
+      "  '\\ufeffThe Project Gutenberg-tm trademark, '],\n",
+      " ['The Project Gutenberg Literary Archiv',\n",
+      "  'The Project Gutenberg-tm electronic w',\n",
+      "  'The Project Gutenberg-tm electronic\\nw',\n",
+      "  'The Project Gutenberg-tm electronical',\n",
+      "  'The Project Gutenberg Literary Archim'],\n",
+      " ['he Project Gutenberg Literary Archive',\n",
+      "  'he Project Gutenberg-tm electronic wo',\n",
+      "  'he Project Gutenberg-tm electronic\\nwo',\n",
+      "  'he Project Gutenberg-tm electronicall',\n",
+      "  'he Project Gutenberg Literary Archime'],\n",
+      " ['e Project Gutenberg Literary Archive ',\n",
+      "  'e Project Gutenberg-tm electronic wor',\n",
+      "  'e Project Gutenberg Literary Archive\\n',\n",
+      "  'e Project Gutenberg-tm electronic\\nwor',\n",
+      "  'e Project Gutenberg-tm electronically'],\n",
+      " [' Project Gutenberg Literary Archive F',\n",
+      "  ' Project Gutenberg-tm electronic work',\n",
+      "  ' Project Gutenberg Literary Archive\\nF',\n",
+      "  ' Project Gutenberg-tm electronic\\nwork',\n",
+      "  ' Project Gutenberg Literary Archive B']]\n"
+     ]
+    }
+   ],
    "source": [
     "importlib.reload(autoregressive)    \n",
     "net = autoregressive.load_architecture(\"models/autoregressive_lstm.arch\")\n",
